[gd_scene load_steps=10 format=3 uid="uid://dudloy24afdpr"]

[ext_resource type="Shader" path="res://film_grain.gdshader" id="1_0bm8v"]
[ext_resource type="PackedScene" uid="uid://djm3tkyksdxqd" path="res://kulan.tscn" id="1_6kmrl"]
[ext_resource type="Shader" path="res://chromatic_aberration.gdshader" id="2_vp784"]
[ext_resource type="AudioStream" uid="uid://cv78htja5i60q" path="res://bridgesx.ogg" id="4_3xxqe"]
[ext_resource type="Script" path="res://controls.gd" id="5_cdmhi"]
[ext_resource type="Script" path="res://camera_control.gd" id="6_bqdcb"]
[ext_resource type="Script" path="res://fps_label.gd" id="7_5uh70"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pudld"]
shader = ExtResource("1_0bm8v")
shader_parameter/grain_amount = 0.051
shader_parameter/grain_size = 1.445
shader_parameter/animate = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_201c1"]
shader = ExtResource("2_vp784")
shader_parameter/r_displacement = Vector2(3, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-3, 0)

[node name="main" type="Node3D"]

[node name="grain layer2" type="CanvasLayer" parent="."]
layer = 2

[node name="filmgrain" type="ColorRect" parent="grain layer2"]
visible = false
material = SubResource("ShaderMaterial_pudld")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="chromatic aberration shader2" type="CanvasLayer" parent="."]
layer = 2

[node name="chromatic" type="ColorRect" parent="chromatic aberration shader2"]
visible = false
material = SubResource("ShaderMaterial_201c1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="menu" type="CanvasLayer" parent="."]

[node name="light" type="HSlider" parent="menu"]
offset_left = 72.0
offset_top = 610.0
offset_right = 1112.0
offset_bottom = 626.0
max_value = 4.0
step = 0.05

[node name="lightlabel" type="Label" parent="menu/light"]
layout_mode = 0
offset_left = -53.0
offset_top = -5.0
offset_right = -13.0
offset_bottom = 21.0
text = "light"

[node name="chroma" type="CheckButton" parent="menu"]
offset_top = 77.0
offset_right = 90.0
offset_bottom = 108.0
text = "chromatic aberration"

[node name="grain" type="CheckButton" parent="menu"]
offset_top = 39.0
offset_right = 212.0
offset_bottom = 70.0
text = "grain"

[node name="controls" type="Node3D" parent="menu" node_paths=PackedStringArray("chroma_shader", "grain_shader")]
script = ExtResource("5_cdmhi")
chroma_shader = NodePath("../../chromatic aberration shader2/chromatic")
grain_shader = NodePath("../../grain layer2/filmgrain")

[node name="fps" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("7_5uh70")

[node name="kulan" parent="." instance=ExtResource("1_6kmrl")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3xxqe")
autoplay = true

[node name="camera" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.61862)
script = ExtResource("6_bqdcb")

[node name="Camera3D" type="Camera3D" parent="camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.03352)
fov = 37.8493

[connection signal="value_changed" from="menu/light" to="menu/controls" method="_on_light_value_changed"]
[connection signal="toggled" from="menu/chroma" to="menu/controls" method="_on_chroma_toggled"]
[connection signal="toggled" from="menu/grain" to="menu/controls" method="_on_grain_toggled"]
